--- a/rttfcar_commander/rttfcar_commander.html
+++ b/rttfcar_commander/rttfcar_commander.html
@@ -10,7 +10,7 @@
         <header>
             <h1>PiComm</h1>
             <h3>RPi IP</h3>
-            <input type="text" value="192.168.0.252" id="ip" />
+            <input type="text" id="ip" />
         </header>
 
         <main id="command-buttons"></main>
@@ -18,6 +18,7 @@
         <aside class='result'></aside>
 
         <script>
+            $("#ip").val(CONFIG.default_ip);
             for(let command of CONFIG.commands) {
                 if(!command.disabled) {
                     let command_button = $("<button>");
@@ -25,7 +26,7 @@
                     command_button.click(function() {
                         let ip = $("#ip").val();
                         let port = 5000;
-                        let data = {"command": "rostopic list"};
+                        let data = {"command": command.command};
                         $.post( `http://${ip}:${port}/execute`, data, function( result ) {
                             $( ".result" ).html( result );
                         });
